--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@fortawesome/free-regular-svg-icons": "^6.6.0",
     "@fortawesome/free-solid-svg-icons": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "axios": "^1.7.9",
+    "cities.json": "^1.1.45",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
